<resources>
    <string name="app_name">+cotas</string>

    <!-- login -->
    <string name="sign_in">Sign in</string>
    <string name="create">Create</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="error_user_not_found">Error, User not found.</string>
    <string name="error_authentication">Error, Authentication failed.</string>
    <string name="required">Required.</string>
    <string name="error_password_length">The password should be at least 6 character.</string>
    <string name="error_email_format">The email address is badly formatted.</string>
    <string name="application_logo">application logo</string>

    <!-- adverlist -->
    <string name="add_advert">Add advert</string>

    <!-- advert view -->
    <string name="advert_fav">Advert fav</string>
    <string name="advert_cover">Advert cover</string>
    <string name="advert_recent">Recent advert</string>

    <!-- profile -->
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="icon_level_info">Level info icon</string>
    <string name="on_sale">On sale</string>
    <string name="favorites">Favorites</string>
    <string name="following_number_example">3</string>
    <string name="following">following</string>
    <string name="followed_example">2</string>
    <string name="followed">followers</string>
    <string name="sold_example">3</string>
    <string name="sold">sales</string>
    <string name="buy_example">2</string>
    <string name="buy">purchases</string>
    <string name="base_level_user">Aun eres un cachorro ¡consigue más puntos!</string>
    <string name="no_data_available">There are no data available</string>

    <!-- edit profile -->
    <string name="edit_profile">Edit profile</string>
    <string name="error_min_name_length">The name should be at least 2 character.</string>
    <string name="error_max_name_length">The name should be a maximum 15 character.</string>
    <string name="error_min_surname_length">The surname should be at least 2 character.</string>
    <string name="error_max_surname_length">The surname should be at least 15 character.</string>
    <string name="error_min_city_length">The city should be at least 2 character.</string>
    <string name="error_max_city_length">The city should be at least 15 character.</string>
    <string name="error_min_country_length">The country should be at least 2 character.</string>
    <string name="error_max_country_length">The country should be at least 15 character.</string>
    <string name="city">city</string>
    <string name="country">country</string>
    <string name="title_label">¡Raise your level! You are currently:</string>
    <string name="error_save_user">Error, cannot save data.</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="save">Save</string>
    <string name="user_image">imagen de usuario</string>
</resources>
