<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".ui.activities.MainActivity">

    <item
        android:id="@+id/btnEdit"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_edit_white"
        android:title="@string/edit"/>
</menu>